--- a/src/styles/components/_Summary.scss
+++ b/src/styles/components/_Summary.scss
@@ -649,6 +649,7 @@
           cursor: pointer;
           font-weight: 600;
           min-width: 90px;
+          margin-bottom: 8px;
           display: inline-block;
           &:hover {
             color: $link-color-dark;
